# ShooterTestOld

./: .gitignore  CMakeLists.txt
include/: Client.hpp  ClientContainer.hpp  ClientPlayer.hpp  ContainerFactory.hpp  Game.hpp  HUD.hpp  MainMenu.hpp  PlayerFactory.hpp  Server.hpp  ServerContainer.hpp  ServerPlayer.hpp
include/container/: ServerContainer.hpp
include/player/: ClientPlayer.hpp
include/star/: ClientStar.hpp  ServerStar.hpp  StarFactory.hpp
media/: Vera.txt  bullettrail.blend  bullettrail.lfm  bullettrail.lfmg  clearlooks.lfgt  container.lfm  container.lfmg  diamond.lfm  diamond.lfmg  drone.lfm  drone.lfmg  gun.lfm  gun.lfmg  pointer.lfm  pointer.lfmg  soldier.lfm  soldier.lfmg  soldier_anim.lfmg  soldier_skel.lfmg  star.blend  star.lfm  star.lfmg
msvc/: Client.vcproj  ShooterTest.sln
src/: Client.cpp  ClientContainer.cpp  ClientPlayer.cpp  ContainerFactory.cpp  Game.cpp  HUD.cpp  MainMenu.cpp  PlayerFactory.cpp  Server.cpp  ServerContainer.cpp  ServerPlayer.cpp  main.cpp  servermain.cpp
src/container/: ClientContainer.cpp  ContainerFactory.cpp  ServerContainer.cpp
src/player/: ClientPlayer.cpp  PlayerFactory.cpp  ServerPlayer.cpp
src/star/: ClientStar.cpp  ServerStar.cpp  StarFactory.cpp
